--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,6 +15,9 @@ ja:
         description: 詳細
         list: 一覧
         new_book: 新規単語帳
+        edit: 編集
+        delete: 削除
+        delete_confirm: 単語帳「%{book}」を削除します
   date:
     abbr_day_names:
     - 日
