--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,6 +14,7 @@ ja:
         name: 名前
         description: 詳細
         list: 一覧
+        word_list: 単語一覧
         new_book: 新規単語帳
         edit: 編集
         delete: 削除
